# circremote

./: .gitignore  CHANGELOG.md  FAQ.md  MANIFEST.in  README.md  bump_version.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: 01-installation-issue.yml  02-runtime-issue.yml  03-command-issue.yml  04-general-issue.yml  05-feature-request.yml  README.md  command-issue.md  command-issue.yml  config.yml  feature-request.md  feature-request.yml  general-issue.md  general-issue.yml  installation-issue.md  installation-issue.yml  runtime-issue.md  runtime-issue.yml
.github/workflows/: README.md  pr-management.yml  pr-notification.yml  pr-review-request.yml  tests.yml
circremote/: __init__.py  cli.py  config.py  connection.py  version.py
commands/ADT7410/: code.py  info.json
commands/ADXL335/: code.py  info.json
commands/ADXL343/: code.py
commands/ADXL345/: code.py  requirements.txt
commands/ADXL375/: code.py
commands/AHT20/: code.py  info.json
commands/AMG8833/: code.py
commands/APDS9960/: code.py  info.json
commands/AS7341/: code.py  info.json  requirements.txt
commands/BH1750/: code.py  info.json
commands/BME280/: code.py  info.json
commands/BME680/: code.py  info.json
commands/BMP280/: code.py  info.json
commands/BMP388/: info.json
commands/BMP390/: code.py  info.json
commands/CCS811/: code.py  info.json  requirements.txt
commands/DPS310/: code.py  info.json  requirements.txt
commands/DRV5032/: code.py  info.json
commands/DS18B20/: code.py  info.json
commands/DS2484/: code.py  info.json  requirements.txt
commands/DS3231/: code.py  requirements.txt
commands/ENS160/: code.py  info.json
commands/HDC3022/: code.py  info.json  requirements.txt
commands/HTU31/: code.py
commands/ISM330DHCX/: code.py
commands/LIS2MDL/: code.py  info.json
commands/LIS3DH/: code.py  info.json
commands/LIS3MDL/: code.py  info.json
cpctrl/: __init__.py  cli.py  config.py  connection.py
doc/: about.md  commands.md  configuration.md  contributing.md  development.md  faq.md  install.md  release.md  testing.md  usage.md
docker/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  validate.sh
tests/: README.md  __init__.py  conftest.py
(+273 files in other folders)
